Fix header letter-spacing

--- a/src/scss/components/_left-comment.scss
+++ b/src/scss/components/_left-comment.scss
@@ -22,7 +22,7 @@
   }
 
   &__header{
-    max-width: 420px;
+    max-width: 430px;
     z-index: 1;
     position: relative;
   }
