--- a/src/scss/components/_top-line.scss
+++ b/src/scss/components/_top-line.scss
@@ -22,7 +22,7 @@
   }
 
   &__seed{
-    margin: 16px 80px 16px 0;
+    margin: 15px 80px 15px 0;
   }
   
   &__text{
